# tools-cleanup

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
notebooks/: coordinate_systems.ipynb
script/: run_multi_config.py
scripts/: alter_requirements.py  run_grid_search_config.py  run_multi_config.py
tests/: conftest.py  test_format.py
tools/agent/: agent.py  base_agent_checkpoint.py  prior_torch_agent.py  torch_agent.py  torch_agent_checkpoint.py
tools/config/: config.py  config_tool.py  experiment_config.py  experiment_output_config.py  grid_search_config.py  multi_config_config.py  multi_runner_config.py  output_config.py
tools/context/: script_execution.py  temporary_device.py  temporary_property.py  temporary_training.py  torch_deterministic_algorithms.py
tools/dataset/: __init__.py  base_dataset.py  batched_dataset.py  image_path_dataset.py  prior_dataset.py  separable_dataset.py  subdivisible_dataset.py  torch_datasource.py
tools/decorator/: forward_docstring.py
tools/error/: __init__.py  argument_none_type_suggestion_error.py
tools/event/: __init__.py  agent_save_event_args.py  event.py  model_step_event_args.py  torch_agent_save_event_args.py  torch_model_step_event_args.py  torch_optimizer_created_event_args.py  torch_param_altered_event_args.py  torch_training_started_event_args.py  training_finished_event_args.py  training_started_event_args.py  watchdog.py
tools/io/: image.py  shields.py
tools/labels/: projected_timed_box_3d.py  timed_box_2d.py  timed_box_3d.py
tools/linalg/: __init__.py  utils.py
tools/logger/: experiment_logger.py  logging.py  prefix_logger_adapter.py  tensorboard.py  wandb_logger.py
tools/measures/: iou.py  tracker_loss.py
tools/metric/: metric.py  metric_entry.py  metric_mode.py  metric_scope.py  metric_summary.py  regularizer.py
tools/mixin/: __init__.py  argparser_mixin.py  env_config_mixin.py  item_member_mixin.py  series_convertible_mixin.py  torch_dtype_mixin.py
tools/model/: abstract_scene_node.py  discrete_module_scene_node_3d.py  module_scene_node.py  module_scene_node_3d.py  module_scene_parent.py  pretrainable_module.py  scene_node.py  visual_node_3d.py  zoo.py
tools/rich/: dataframe.py  rich_file_handler.py
tools/run/: abstract_runner.py  agent_runner.py  config_runner.py  dataset_processor.py  grid_search_runner.py  multi_config_runner.py  multi_runner.py  runner.py  trainable_runner.py
tools/scene/: box_node_3d.py  coordinate_system_3d.py
tools/scripts/: convert_masks.py  tag.py  version.py
tools/segmentation/: masking.py
tools/serialization/: compressable_mixin.py  json_convertible.py  object_decoder.py  object_encoder.py  object_hook.py  object_reference.py
tools/torch/: linear2dinterpolate.py  parse_device.py
tools/transforms/: __init__.py  channel_select.py  conditional.py  fittable_transform.py  invertable_transform.py  mean_std.py  min_max.py  quantize.py  to_numpy.py  to_numpy_image.py  to_tensor.py  to_tensor_image.py  transform.py
(+97 files in other folders)
