[tool.poetry]
name = "tools"
version = "0.1.0"
description = "A semi-structured collection of general tools and functions that I have implemented for my research projects."
authors = ["Jan Philipp Schneider <jp-schneider@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "*"
pandas = "*"
torch = {version = ">=1.2.0", optional = true}
torchvision = {version = "*", optional = true}
torchaudio = {version = "*", optional = true}
dill = {version = "^0.3.8", optional = true}
simple-parsing = "^0.1.5"
typing-inspect = "^0.9.0"
scikit-learn = {version = "*", optional = true}
jsonpickle = {version = "*", optional = true}
tqdm = "*"
matplotlib = {version = "^3.8.3", optional = true}
toml = "^0.10.2"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
