[tool.poetry]
name = "tools"
version = "0.1.0"
description = "A semi-structured collection of general tools and functions that I have implemented for my research projects."
authors = ["Jan Philipp Schneider <jp-schneider@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "*"
pandas = "*"
dill = {version = "^0.3.8", optional = true}
simple-parsing = "^0.1.5"
typing-inspect = "^0.9.0"
scikit-learn = {version = "*", optional = true}
jsonpickle = {version = "*"}
tqdm = "*"
matplotlib = {version = "*", optional = true}
toml = "^0.10.2"
pyyaml = "^6.0.1"
pathos = {version = "^0.3.3", optional = true}
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pre-commit = {version = "*", optional = true}
autopep8 = "*"
ipykernel = "*"
ipywidgets = "*"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
