[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tools"
version = "0.1.2"
description = "A semi-structured collection of general tools and functions that I have implemented for my research projects."
authors = [ "Jan Philipp Schneider <jp-schneider@users.noreply.github.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "*"
pandas = "*"
simple-parsing = "^0.1.5"
typing-inspect = "^0.9.0"
tqdm = "*"
toml = "^0.10.2"
pyyaml = "^6.0.1"
rich = "^13.9.4"

[tool.poetry.dependencies.dill]
version = "^0.3.8"
optional = true

[tool.poetry.dependencies.scikit-learn]
version = "*"
optional = true

[tool.poetry.dependencies.jsonpickle]
version = "*"

[tool.poetry.dependencies.matplotlib]
version = "*"
optional = true

[tool.poetry.dependencies.pathos]
version = "^0.3.3"
optional = true

[tool.poetry.dependencies.wandb]
version = "^0.19.5"
optional = true

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
ipykernel = "*"
ipywidgets = "*"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies.pre-commit]
version = "*"
optional = true
